syntax = "proto3";

option go_package = "github.com/ecnuvj/vhoj_user/pkg/sdk/userpb";

package sdk;

import "base/base.proto";
import "userpb/user.proto";

service UserService {
    rpc Login(LoginRequest) returns(LoginResponse) {};
    rpc Register(RegisterRequest) returns(RegisterResponse) {};
    rpc GenerateUsers(GenerateUsersRequest) returns(GenerateUsersResponse) {};
    rpc GetUserRoles(GetUserRolesRequest) returns(GetUserRolesResponse) {};
    rpc UpdateUserRoles(UpdateUserRolesRequest) returns(UpdateUserRolesResponse) {};
    rpc GetAllUsers(GetAllUsersRequest) returns(GetAllUsersResponse) {};
    rpc DeleteUsers(DeleteUsersRequest) returns(DeleteUsersResponse) {};
}

message LoginRequest {
    string nickname = 1;
    string password = 2;
}

message LoginResponse {
    base.BaseResponse base_response = 1;
}

message RegisterRequest {
    User user = 1;
}

message RegisterResponse {
    base.BaseResponse base_response = 1;
}

message GenerateUsersRequest {
    int32 generate_count = 1;
    uint64 contest_id = 2;
}

message GenerateUsersResponse {
    repeated User users = 1;
    base.BaseResponse base_response = 2;
}

message GetUserRolesRequest {
    uint64 user_id = 1;
}

message GetUserRolesResponse {
    repeated string roles = 1;
    base.BaseResponse base_response = 2;
}

message UpdateUserRolesRequest {
    repeated uint64 role_id = 1;
    uint64 user_id = 2;
}

message UpdateUserRolesResponse {
    base.BaseResponse base_response = 1;
}

message GetAllUsersRequest {
    int32 page_no = 1;
    int32 page_size = 2;
}

message GetAllUsersResponse {
    repeated User user = 1;
    int32 total_pages = 2;
    int32 total_count = 3;
    base.BaseResponse base_response = 4;
}

message DeleteUsersRequest {
    repeated uint64 user_id = 1;
}

message DeleteUsersResponse {
    base.BaseResponse base_response = 1;
}
